trying fix arrows visible

--- a/#source/sass/_slider.scss
+++ b/#source/sass/_slider.scss
@@ -91,12 +91,12 @@ $slick-opacity-not-active: 0.25 !default;
 .slick-prev {
     width: 39px;
     height: 28px;
-    background: url("../images/_slider/arrow2.svg");}
+    background: url("../images/.slider/arrow2.svg");}
 
 .slick-next {
     width: 39px;
     height: 28px;
-    background: url("../images/_slider/arrow.svg");
+    background: url("../images/.slider/arrow.svg");
 }
 
 /* Dots */
